--- a/md/画面詳細図/トップページ.md
+++ b/md/画面詳細図/トップページ.md
@@ -2,3 +2,6 @@
 ## トップページ
 ### プロトタイプは以下のリンク先
 [プロトタイプ](https://www.figma.com/file/ku60dzyRN9VaQCKVeAWSw4/Untitled?node-id=1%3A2)
+*****
+<img src="../img/toppage.png" width="500">
+*****
