--- a/md/画面詳細図/トップページ.md
+++ b/md/画面詳細図/トップページ.md
@@ -11,11 +11,11 @@
 |----|------|------|------------|---------|--------|
 |1   |バナー|サイト名表示|-      |-        |-       |
 |2   |ログイン|テキスト画像|-    | -        |-      |
-|3|ID|入力欄|テキスト入力|-|-|
-|4|PASS|入力欄|テキスト入力|-|-|
-|5||||||
-|6||||||
-|7||||||
+|3|ID|入力欄|テキスト入力|-|〇|
+|4|PASS|入力欄|テキスト入力|-|〇|
+|5|ログインボタン|ボタン|クリック|ログイン処理実行|-|
+|6|商品検索|テキスト画像|-|-|-|
+|7|商品名|テキスト表示|-|-|-|
 |8||||||
 |9||||||
 |10||||||
