--- a/md/画面詳細図/トップページ.md
+++ b/md/画面詳細図/トップページ.md
@@ -16,19 +16,19 @@
 |5|ログインボタン|ボタン|クリック|ログイン処理実行|-|
 |6|商品検索|テキスト画像|-|-|-|
 |7|商品名|テキスト表示|-|-|-|
-|8||||||
-|9||||||
-|10||||||
-|11||||||
-|12||||||
-|13||||||
-|14||||||
-|15||||||
-|16||||||
-|17||||||
-|18||||||
-|19||||||
-|20||||||
-|21||||||
-|22||||||
-|23||||||
+|8|商品名|入力欄|テキスト入力|-|〇|
+|9|カテゴリ|テキスト表示|-|-|-|
+|10|管楽器|||||
+|11|管楽器|||||
+|12|弦楽器|||||
+|13|弦楽器|||||
+|14|打楽器|||||
+|15|打楽器|||||
+|16|検索|||||
+|17|商品一覧|||||
+|18|カートの中|||||
+|19|登録情報|||||
+|20|商品一覧|||||
+|21|商品画像|||||
+|22|商品名|||||
+|23|価格|||||
