--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -1,1 +1,13 @@
+### 画面詳細図
+## トップページ
+### プロトタイプは以下のリンク先
+[プロトタイプ](https://www.figma.com/file/YG5ey5pOtI5ZYlaZHWfvS7/Untitled?node-id=3%3A44)
+*****
+<img src="../img/購入詳細.png" width="500">
 
+*****
+補足：対応DBの列はDB設計後、丸を対応するテーブル・カラム名に差し替えること。
+| ID | 要素 | 内容 | アクション | イベント | 対応DB |
+|----|------|------|------------|---------|--------|
+|1   |バナー|サイト名表示|-      |-        |-       |
+|2   |ログイン|テキスト画像|-    | -        |-      |
