--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -3,7 +3,7 @@
 ### プロトタイプは以下のリンク先
 [プロトタイプ](https://www.figma.com/file/YG5ey5pOtI5ZYlaZHWfvS7/Untitled?node-id=3%3A44)
 *****
-<img src="../img/購入詳細.png" width="500">
+<img src="../img/購入詳細_LI.jpg" width="500">
 
 *****
 補足：対応DBの列はDB設計後、丸を対応するテーブル・カラム名に差し替えること。
