--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -11,4 +11,4 @@
 |----|------|------|------------|---------|--------|
 |1   |バナー|サイト名表示|-      |-        |-       |
 |2   |ログイン|テキスト画像|-    | -        |-      |
-|3   |
+|3   |注文タブ|1を表示|クリック|選択タブ||
