--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -11,4 +11,7 @@
 |----|------|------|------------|---------|--------|
 |1   |バナー|サイト名表示|-      |-        |-       |
 |2   |ログイン|テキスト画像|-    | -        |-      |
-|3   |注文タブ|1を表示|クリック|選択タブ||
+|3   |表示1|パンフレットの注文履歴画|表示||
+|4   |表示2|チケットの注文履歴|表示||
+|5   |注文タブ|1を表示|クリック|タブ移動||
+|6   |チケットタブ|2を表示|クリック|タブ移動||
