--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -16,4 +16,4 @@
 |5   |注文タブ|1を表示|クリック|タブ移動||
 |6   |チケットタブ|2を表示|クリック|タブ移動||
 |7   |期間選択|選択された期間内の履歴を表示|selectボックス|||
-|8   |国名||テキスト|表示||〇|
+|8   |国名||テキスト|-||〇|
