--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -16,4 +16,5 @@
 |5   |注文タブ|1を表示|クリック|タブ移動|-|
 |6   |チケットタブ|2を表示|クリック|タブ移動|-|
 |7   |期間選択|選択された期間内の履歴を表示|selectボックス|-|-|
-|8   |国名|国名表示|テキスト|-|-|〇|
+|8   |国名|国名表示|テキスト表示|-|-|||
+|9   |地域名|地域名表示|テキスト表示|-|-|
