--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -11,8 +11,8 @@
 |----|------|------|------------|---------|--------|
 |1   |バナー|サイト名表示|-      |-        |-       |
 |2   |ログイン|テキスト画像|-    | -        |-      |
-|3   |表示1|パンフレットの注文履歴画面|表示|〇|
-|4   |表示2|チケットの注文履歴画面|表示|〇|
+|3   |表示1|パンフレットの注文履歴画面|表示|-|-|
+|4   |表示2|チケットの注文履歴画面|表示|-|-|
 |5   |注文タブ|1を表示|クリック|タブ移動|-|
 |6   |チケットタブ|2を表示|クリック|タブ移動|-|
 |7   |期間選択|選択された期間内の履歴を表示|selectボックス|-|-|
