--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -18,4 +18,5 @@
 |7   |期間選択|選択された期間内の履歴を表示|selectボックス|-|-|
 |8   |国名|国名表示|テキスト表示|-|〇|
 |9   |地域名|地域名表示|テキスト表示|-|〇|
-|10  |国旗|画像|画像表示|-|〇||
+|10  |国旗|画像|画像表示|-|〇|
+|11  |国・地域詳細ボタン|ボタン|クリック|国・地域詳細へ遷移|〇|
