--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -20,4 +20,4 @@
 |9   |地域名|地域名表示|テキスト表示|-|〇|
 |10  |国旗|画像|画像表示|-|〇|
 |11  |国・地域詳細ボタン|ボタン|クリック|国・地域詳細へ遷移|〇|
-|12  |トップページボタン|ボタン|クリック|
+|12  |トップページボタン|ボタン|クリック|-|-|
