--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -1,5 +1,5 @@
 ### 画面詳細図
-## トップページ
+## 購入詳細
 ### プロトタイプは以下のリンク先
 [プロトタイプ](https://www.figma.com/file/YG5ey5pOtI5ZYlaZHWfvS7/Untitled?node-id=3%3A44)
 *****
