--- a/mypage/md/国・地域詳細.md
+++ b/mypage/md/国・地域詳細.md
@@ -3,7 +3,7 @@
 ### プロトタイプは以下のリンク先
 [プロトタイプ](https://www.figma.com/file/ku60dzyRN9VaQCKVeAWSw4/Untitled?node-id=1%3A2)
 *****
-<img src="../img/toppage.png" width="500">
+<img src="../img/国・地域詳細.png" width="500">
 
 *****
 補足：対応DBの列はDB設計後、丸を対応するテーブル・カラム名に差し替えること。
