--- a/mypage/md/旅行.md
+++ b/mypage/md/旅行.md
@@ -3,7 +3,7 @@
 ### プロトタイプは以下のリンク先
 [プロトタイプ](https://www.figma.com/file/YG5ey5pOtI5ZYlaZHWfvS7/Untitled?node-id=11%3A13)
 *****
-<img src="../img/旅行.png" width="500">
+<img src="../img/旅行内容.png" width="500">
 
 *****
 補足：対応DBの列はDB設計後、丸を対応するテーブル・カラム名に差し替えること。
