--- a/mypage/md/注文.md
+++ b/mypage/md/注文.md
@@ -1,1 +1,11 @@
+### 画面詳細図
+## 注文
+### プロトタイプは以下のリンク先
+[プロトタイプ](https://www.figma.com/file/YG5ey5pOtI5ZYlaZHWfvS7/Untitled?node-id=18%3A18)
+*****
+<img src="../img/注文.png" width="500">
 
+*****
+補足：対応DBの列はDB設計後、丸を対応するテーブル・カラム名に差し替えること。
+| ID | 要素 | 内容 | アクション | イベント | 対応DB |
+|----|------|------|------------|---------|--------|
