--- a/mypage/md/会員登録.md
+++ b/mypage/md/会員登録.md
@@ -10,3 +10,7 @@
 | ID | 要素 | 内容 | アクション | イベント | 対応DB |
 |----|------|------|------------|---------|--------|
 |1   |バナー|サイト名表示|-      |-        |-       |
+|2   |ID|入力欄|テキスト入力|-|〇|
+|3|PASS|入力欄|テキスト入力|-|〇|
+|4|PASS再入力|入力欄|テキスト入力|-|〇|
+|5|登録ボタン|ボタン|クリック|登録処理実行|〇|
