--- a/mypage/md/購入詳細.md
+++ b/mypage/md/購入詳細.md
@@ -19,4 +19,4 @@
 |8   |地域名|地域名表示|テキスト表示|-|〇|
 |9  |国旗|画像|画像表示|-|〇|
 |10  |国・地域詳細ボタン|ボタン|クリック|国・地域詳細へ遷移|〇|
-|11  |トップページボタン|ボタン|クリック|-|-|
+|11  |トップページボタン|ボタン|クリック|トップページへ遷移|-|
