--- a/mypage/md/旅行.md
+++ b/mypage/md/旅行.md
@@ -12,3 +12,4 @@
 |1   |バナー|サイト名表示|-      |-        |-       |
 |2   |国・地域名|国・地域名表示|-|-|〇
 |3  |地域近くの空港|選択されていた地域近くの空港表示|-|-|〇| 
+|4|注文ボタン|ボタン|注文へ遷移|-|-|-
