--- a/mypage/md/旅行.md
+++ b/mypage/md/旅行.md
@@ -13,4 +13,6 @@
 |2   |国・地域名|国・地域名表示|-|-|〇
 |3  |地域近くの空港|選択されていた地域近くの空港表示|-|-|〇| 
 |4|注文ボタン|ボタン|注文へ遷移|-|-|-
-|5|地域のパンフレット|選択されていた地域の名前|-|-|
+|5|地域のパンフレット|選択されていた地域の名前|-|-|〇
+|6|注文ボタン|ボタン|注文へ遷移|-|-|-
+|7|トップページボタン|トップページへ遷移|-|-|-|
