--- a/mypage/md/注文.md
+++ b/mypage/md/注文.md
@@ -9,3 +9,5 @@
 補足：対応DBの列はDB設計後、丸を対応するテーブル・カラム名に差し替えること。
 | ID | 要素 | 内容 | アクション | イベント | 対応DB |
 |----|------|------|------------|---------|--------|
+|1   |バナー|サイト名表示|-      |-        |-       |
+|2   |内容|注文を押された国・地域、商品名|-|-|〇|
