--- a/mypage/md/注文.md
+++ b/mypage/md/注文.md
@@ -12,4 +12,4 @@
 |1   |バナー|サイト名表示|-      |-        |-       |
 |2   |内容|注文を押された商品国・地域、商品名|-|-|〇|
 |3   |国旗|注文を押された商品の国旗画像|-|-|〇|
-|4   |お届け予定|届けられる予定日表示|Date|〇
+|4   |お届け予定|届けられる予定日表示|Date|-|〇
