--- a/mypage/md/注文.md
+++ b/mypage/md/注文.md
@@ -13,3 +13,5 @@
 |2   |内容|注文を押された商品国・地域、商品名|-|-|〇|
 |3   |国旗|注文を押された商品の国旗画像|-|-|〇|
 |4   |お届け予定|届けられる予定日表示|Date|-|〇
+|5   |郵便番号|入力欄|テキスト入力|-|〇|
+|6|都道府県名|入力欄|テキスト入力|-|〇|
