--- a/mypage/md/注文.md
+++ b/mypage/md/注文.md
@@ -15,4 +15,8 @@
 |4   |お届け予定|届けられる予定日表示|Date|-|〇
 |5   |郵便番号|入力欄|テキスト入力|-|〇|
 |6|都道府県名|入力欄|テキスト入力|-|〇|
-|7|都道府県選択|selectボックス|-|-|
+|7|都道府県選択|selectボックス|-|〇|
+|8|市町村区名|入力欄|テキスト入力|-|〇|
+|9|市町村区選択|selectボックス|-|〇|
+|10|番地名|入力欄|テキスト入力|-|〇|
+|11|建物名|入力欄|テキスト入力|-|〇|
