--- a/mypage/md/注文.md
+++ b/mypage/md/注文.md
@@ -20,3 +20,7 @@
 |9|市町村区選択|selectボックス|-|〇|
 |10|番地名|入力欄|テキスト入力|-|〇|
 |11|建物名|入力欄|テキスト入力|-|〇|
+|12|最短指定日|届けられる最短指定日表示|Date|-|〇
+|13|年月日|入力欄|キスト入力|-|〇|
+|14|確定ボタン|ボタン|注文確定処理実行|-|〇|
+|15|キャンセルボタン|注文を無しに|-|〇|
