--- a/mypage/md/注文.md
+++ b/mypage/md/注文.md
@@ -23,4 +23,5 @@
 |12|最短指定日|届けられる最短指定日表示|Date|-|〇
 |13|年月日|入力欄|キスト入力|-|〇|
 |14|確定ボタン|ボタン|注文確定処理実行|-|〇|
-|15|キャンセルボタン|注文を無しに|-|-|〇|
+|15|キャンセルボタン|ボタン|注文を無しに|-|〇|
+|16|トップページ|ボタン|トップページへ遷移|-|-
