--- a/mypage/md/国・地域詳細.md
+++ b/mypage/md/国・地域詳細.md
@@ -10,4 +10,6 @@
 | ID | 要素 | 内容 | アクション | イベント | 対応DB |
 |----|------|------|------------|---------|--------|
 |1   |バナー|サイト名表示|-      |-        |-       |
-|2|国タブ|selectタブ|クリック|-|
+|2|国タブ|selectタブ|クリック|-|〇|
+|3|地域タブ|selectタブ|クリック|-|〇|
+|4|地域名|選択された地域表示|-|〇|
